# cpp_helpers

./: .gitignore  CMakeLists.txt  Cpp_Helpers.cpp  Cpp_Helpers.h  README.md  ROS_Helpers.h  bld.sh
Learning/: friend_class.cpp
basic/: Cpp_Helpers.cpp  Cpp_Helpers.hpp
containers/: Container_Helpers.cpp  Container_Helpers.hpp
ros/: ROS_Helpers.cpp
templates/: CMakeLists.txt  HEADER_TEMPLATE.h  MAIN_TEMPLATE.cpp  ROS_NODE_TEMPLATE.cpp  SOURCE_TEMPLATE.cpp  cmake_breadcrumbs.txt
test/: basic_test.cpp
